create models and service

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,13 @@
-<p>contact works!</p>
+<h2>Lista de Contatos</h2>
+<hr />
+<table>
+    <tr>
+        <td>ID</td>
+        <td>name</td>
+        <td>phone</td>
+        <td>category</td>
+        <td>created at</td>
+        <td>modified at</td>
+        <td>is active</td>
+    </tr>
+</table>
