--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -29,6 +29,7 @@
         <td>{{ contact.is_active }}</td>
         <td>
             <button (click)="editContact(contact.id)">Editar</button>
+            <button (click)="deleteContact(contact.id)">Deletar</button>
         </td>
     </tr>
 </table>
