--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,35 +1,43 @@
-<h2>Criar um contato</h2>
-<form action="">
-    <p>Nome: <input type="text" name="name" [(ngModel)]="contact.name" /></p>
-    <p>
-        Telefone: <input type="text" name="phone" [(ngModel)]="contact.phone" />
-    </p>
-    <p><button (click)="createContact()">Criar</button></p>
-</form>
-<h2>Lista de Contatos</h2>
-<hr />
-<table>
-    <tr>
-        <td>ID</td>
-        <td>name</td>
-        <td>phone</td>
-        <td>category</td>
-        <td>created at</td>
-        <td>modified at</td>
-        <td>is active</td>
-        <td>action</td>
-    </tr>
-    <tr *ngFor="let contact of contacts">
-        <td>{{ contact.id }}</td>
-        <td>{{ contact.name }}</td>
-        <td>{{ contact.phone }}</td>
-        <td>{{ contact.category }}</td>
-        <td>{{ contact.created_at }}</td>
-        <td>{{ contact.modified_at }}</td>
-        <td>{{ contact.is_active }}</td>
-        <td>
-            <button (click)="editContact(contact.id)">Editar</button>
-            <button (click)="deleteContact(contact.id)">Deletar</button>
-        </td>
-    </tr>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <!-- Position Column -->
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef>ID</th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+  <!-- Weight Column -->
+  <ng-container matColumnDef="phone">
+    <th mat-header-cell *matHeaderCellDef>Phone</th>
+    <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+  </ng-container>
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="category">
+    <th mat-header-cell *matHeaderCellDef>Category</th>
+    <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+  </ng-container>
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="created_at">
+    <th mat-header-cell *matHeaderCellDef>Created At</th>
+    <td mat-cell *matCellDef="let element"> {{element.created_at}} </td>
+  </ng-container>
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="modified_at">
+    <th mat-header-cell *matHeaderCellDef>Modified at</th>
+    <td mat-cell *matCellDef="let element"> {{element.modified_at}} </td>
+  </ng-container>
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="is_active">
+    <th mat-header-cell *matHeaderCellDef>Is active</th>
+    <td mat-cell *matCellDef="let element"> {{element.is_active}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+<button mat-raised-button (click)="createContact()">
+  Create contact
+</button>
