--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -34,6 +34,21 @@
     <th mat-header-cell *matHeaderCellDef>Is active</th>
     <td mat-cell *matCellDef="let element"> {{element.is_active}} </td>
   </ng-container>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let row">
+      <a routerLink="/contact/update/{{ row.id }}" class="edit">
+        <i class="material-icons">
+          edit
+        </i>
+      </a>
+      <a (click)="deleteContact(row.id)" class="delete">
+        <i class="material-icons">
+          delete
+        </i>
+      </a>
+    </td>
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
